// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Show Popover 1`] = `
<Demo
  visible={false}
>
  <xl-popover
    content="content"
    title="title"
    visible={false}
  >
    <xl-tooltip
      arrowSize={14}
      content={
        <React.Fragment>
          <div
            className="xl-popover__title"
          >
            title
          </div>
          <div
            className="xl-popover__content"
          >
            content
          </div>
        </React.Fragment>
      }
      prefixCls="xl-popover"
      visible={false}
    >
      <xl-popper
        arrow={[Function]}
        offset={5}
        overlayStyle={[Function]}
        popup={[Function]}
        transitionName="xl-popover--fade"
        visible={false}
      >
        <xl-button
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            className="xl-button xl-button--default xl-button--size-default"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              key=".0"
            >
              Button
            </span>
          </button>
        </xl-button>
        <Portal
          containerInfo={
            <body>
              <div
                style="left: 0px; position: absolute; top: 0px; padding-top: 5px;"
              />
            </body>
          }
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "left": 0,
                "paddingTop": 5,
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <xl-css-transition
              beforeAppear={[Function]}
              beforeEnter={[Function]}
              classNames="xl-popover--fade"
              isAppear={true}
              show={false}
            >
              <xl-transition
                afterAppear={[Function]}
                afterEnter={[Function]}
                afterLeave={[Function]}
                appear={[Function]}
                appearCancelled={[Function]}
                beforeAppear={[Function]}
                beforeEnter={[Function]}
                beforeLeave={[Function]}
                enter={[Function]}
                enterCancelled={[Function]}
                isAppear={true}
                leave={[Function]}
                leaveCancelled={[Function]}
                show={false}
              />
            </xl-css-transition>
          </div>
        </Portal>
      </xl-popper>
    </xl-tooltip>
  </xl-popover>
</Demo>
`;

exports[`Popover Show Popover 2`] = `
<Demo
  visible={true}
>
  <xl-popover
    content="content"
    title="title"
    visible={true}
  >
    <xl-tooltip
      arrowSize={14}
      content={
        <React.Fragment>
          <div
            className="xl-popover__title"
          >
            title
          </div>
          <div
            className="xl-popover__content"
          >
            content
          </div>
        </React.Fragment>
      }
      prefixCls="xl-popover"
      visible={true}
    >
      <xl-popper
        arrow={[Function]}
        offset={5}
        overlayStyle={[Function]}
        popup={[Function]}
        transitionName="xl-popover--fade"
        visible={true}
      >
        <xl-button
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            className="xl-button xl-button--default xl-button--size-default"
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              key=".0"
            >
              Button
            </span>
          </button>
        </xl-button>
        <Portal
          containerInfo={
            <body>
              <div
                style="left: 0px; position: absolute; top: 0px; padding-top: 5px;"
              />
            </body>
          }
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "left": 0,
                "paddingTop": 5,
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <xl-css-transition
              beforeAppear={[Function]}
              beforeEnter={[Function]}
              classNames="xl-popover--fade"
              isAppear={true}
              show={false}
            >
              <xl-transition
                afterAppear={[Function]}
                afterEnter={[Function]}
                afterLeave={[Function]}
                appear={[Function]}
                appearCancelled={[Function]}
                beforeAppear={[Function]}
                beforeEnter={[Function]}
                beforeLeave={[Function]}
                enter={[Function]}
                enterCancelled={[Function]}
                isAppear={true}
                leave={[Function]}
                leaveCancelled={[Function]}
                show={false}
              />
            </xl-css-transition>
          </div>
        </Portal>
      </xl-popper>
    </xl-tooltip>
  </xl-popover>
</Demo>
`;
